force-app/main/default/objects/General_Care_Plan__c/General_Care_Plan__c.object-meta.xml
<CustomObject>
    <label>General Care Plan</label>
    <nameField>
        <label>General Care Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Care Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>