force-app/main/default/objects/General_Care_Plan__c/fields/Continence_Personal_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Continence_Personal_Strategies__c</fullName>
    <label>Continence Personal Strategies</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>