force-app/main/default/objects/General_Care_Plan__c/fields/Continence_Personal_Strategies_ID__c.field-meta.xml
<CustomField>
    <fullName>Continence_Personal_Strategies_ID__c</fullName>
    <label>Continence Personal Strategies ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>