force-app/main/default/objects/General_Care_Plan__c/fields/Foot_Care_1__c.field-meta.xml
<CustomField>
    <fullName>Foot_Care_1__c</fullName>
    <label>Foot Care 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>