force-app/main/default/objects/General_Care_Plan__c/fields/Foot_Care_1_ID__c.field-meta.xml
<CustomField>
    <fullName>Foot_Care_1_ID__c</fullName>
    <label>Foot Care 1 ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>