force-app/main/default/objects/General_Care_Plan__c/fields/Nutritional_Risk_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Nutritional_Risk_Strategies__c</fullName>
    <label>Nutritional Risk Strategies</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>
<?xml version="1.0" encoding="UTF-8"?>
<CustomField>
    <fullName>Nutritional_Risk_Strategies__c</fullName>
    <label>Nutritional Risk Strategies</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>