force-app/main/default/objects/General_Care_Plan__c/fields/Nutritional_Risk_Strategies_ID__c.field-meta.xml
<CustomField>
    <fullName>Nutritional_Risk_Strategies_ID__c</fullName>
    <label>Nutritional Risk Strategies ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>