force-app/main/default/objects/General_Care_Plan__c/fields/Personal_Goals__c.field-meta.xml
<CustomField>
    <fullName>Personal_Goals__c</fullName>
    <label>Personal Goals</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>