force-app/main/default/objects/General_Care_Plan__c/fields/Personal_Goals_OHAT_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_Goals_OHAT_ID__c</fullName>
    <label>Personal Goals OHAT ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>