force-app/main/default/objects/General_Care_Plan__c/fields/Personal_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Personal_Strategies__c</fullName>
    <label>Personal Strategies</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>