force-app/main/default/objects/General_Care_Plan__c/fields/Personal_Strategies_OHAT_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_Strategies_OHAT_ID__c</fullName>
    <label>Personal Strategies OHAT ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>
<?xml version="1.0" encoding="UTF-8"?>
<CustomField>
    <fullName>Personal_Strategies_OHAT_ID__c</fullName>
    <label>Personal Strategies OHAT ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>